5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1573_1331.log
== TEST (2019-03-11 15:32:19) 
-- CODE:
print(round(50/3,2))
-- OUTPUT:
16.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:21) 
-- CODE:
print(round(50/3,2))
-- EXECUTION TIME:
0.145856
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:25) 
-- CODE:
print(round(50/3,2))
-- OUTPUT:
16.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:35) 
-- CODE:
print(round(50/3,0))
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:36) 
-- CODE:
print(round(50/3,0))
-- EXECUTION TIME:
0.102716
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:05) 
-- CODE:
print(round(50/3-2))
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:08) 
-- CODE:
print(round(50/3-2))
-- EXECUTION TIME:
0.139251
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:58) 
-- CODE:
print(round(48+2))
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:00) 
-- CODE:
print(round(48+2))
-- EXECUTION TIME:
0.206303
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:31) 
-- CODE:
print(round(50/3%2))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:37:33) 
-- CODE:
print(round(50/3%2))
-- EXECUTION TIME:
0.166362
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:06) 
-- CODE:
print(round(50/3 %2))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print(round(50/3 %2))
-- EXECUTION TIME:
0.185515
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:07) 
-- CODE:
print(round(50/3 %2))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:24) 
-- CODE:
print(round(50/3%2))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:26) 
-- CODE:
print(round(50/3%2))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:32) 
-- CODE:
print(round(50/3%3))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:34) 
-- CODE:
print(round(50/3%3))
-- EXECUTION TIME:
0.157112
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:27) 
-- CODE:
print(round(50//3%))
-- ERROR:
File "XXXX", line 1
    print(round(50//3%))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:32) 
-- CODE:
print(round(50/3%))
-- ERROR:
File "XXXX", line 1
    print(round(50/3%))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:52) 
-- CODE:
print(round(50/3))
-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:18) 
-- CODE:
print(round(50/3))
print(round(//%2))
-- ERROR:
File "XXXX", line 2
    print(round(//%2))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:46) 
-- CODE:
print(round(50//3))
print(round(50%3))
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:48) 
-- CODE:
print(round(50//3))
print(round(50%3))
-- EXECUTION TIME:
0.253233
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
